[package]
name = "elmer"
version = "1.0.0"
edition = "2021"

[dependencies]
log="0.4"
env_logger="0.11"
anyhow="1"
eframe={version="0.31", features=["default_fonts", "wgpu"]}
egui-phosphor = "0.9"
egui_extras="0.31"
regex="1"
url="2"
lapin="2.5"
tokio-executor-trait="2"
futures-lite="2"
ico="0.4"
uuid={version="1", features=["v4"]}
chrono="0.4"

serde="1"
serde_json="1"

tokio={version="1", features=["full"]}

[target.'cfg(target_os="windows")'.build-dependencies]
# set executable icon on windows
winres="0.1"
